# text-to-sql

./: .env.example  .gitignore  Modelfile.qwen35-128k  README.md  SCHEMA.md  TECHNICAL_REPORT.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
app/: bootstrap.py  config.py  logging_config.py  main.py
app/agents/: text_to_sql.py
app/api/: chat.py  health.py  router.py
app/database/: checks.py  constants.py  executor.py  introspection.py  pool.py  queries.py  roles.py  seed.py  validator.py
app/database/sql/: 03_descriptions.sql  04_catalogue.sql
app/llm/: client.py
app/models/: chat.py  database.py  exceptions.py  tools.py
app/prompts/: text_to_sql_agent.py
app/tools/: db_tools.py
ui/: app.py
